fixed spacing issue

--- a/src/style/pages/_work.scss
+++ b/src/style/pages/_work.scss
@@ -72,6 +72,7 @@ h2{
     li{
         transition: 0.75s ease all;
         list-style: none;
+        margin-bottom: 1rem;
       p{
         background-color: $Rood;
         border-radius: 50px;
